--- a/docs/需求分析文档.md
+++ b/docs/需求分析文档.md
@@ -40,10 +40,11 @@
   - 邮箱（格式校验、唯一性校验）
   - 密码（强度校验，至少包含字母和数字）
   - 确认密码（与密码一致性校验）
-  - 验证码（可选，用于防止恶意注册）
+  - 验证码（必填，图形验证码，用于防止恶意注册）
 - 注册成功后自动跳转到登录页面
 - 注册失败时显示明确的错误提示信息
 - 支持注册协议/条款的确认勾选
+- 验证码支持刷新功能，用户可点击刷新获取新验证码
 
 #### 3.1.2 用户登录功能
 **功能描述**：已注册用户通过登录功能进入系统
@@ -52,12 +53,30 @@
 - 提供登录页面，包含以下字段：
   - 用户名/邮箱（支持两种登录方式）
   - 密码
-  - 记住我（可选，保存登录状态）
-  - 验证码（可选，用于防止暴力破解）
+  - 记住我（必选功能，保存登录状态，用户可选择是否勾选）
+  - 验证码（必填，图形验证码，用于防止暴力破解）
 - 登录成功后根据用户角色跳转到对应的首页
 - 登录失败时显示明确的错误提示信息
-- 支持忘记密码功能（可选）
+- 支持忘记密码功能（必选功能）
 - 登录状态保持和自动登出机制
+- 验证码支持刷新功能，用户可点击刷新获取新验证码
+- 勾选"记住我"后，系统应保存登录凭证，下次访问时自动登录（在有效期内）
+
+#### 3.1.3 忘记密码功能
+**功能描述**：用户忘记密码时可以通过此功能重置密码
+
+**功能要求**：
+- 在登录页面提供"忘记密码"链接
+- 忘记密码流程包含以下步骤：
+  - 输入注册时使用的邮箱或用户名
+  - 输入验证码（图形验证码）
+  - 系统发送密码重置链接到用户邮箱
+  - 用户点击邮箱中的重置链接
+  - 用户设置新密码（包含密码强度校验）
+  - 确认新密码（与新密码一致性校验）
+- 密码重置链接应有时效性（如：24小时内有效）
+- 密码重置成功后显示成功提示，并跳转到登录页面
+- 密码重置失败时显示明确的错误提示信息
 
 ### 3.2 角色权限管理
 
@@ -83,7 +102,7 @@
 **功能描述**：系统支持多种语言的切换
 
 **功能要求**：
-- 支持至少两种语言（如：中文简体、英文）
+- 支持两种语言：中文简体、英文
 - 提供语言切换入口（通常在顶部导航栏）
 - 切换语言后，系统界面文字立即更新
 - 语言选择应持久化保存，下次登录时保持用户选择
@@ -107,7 +126,15 @@
 **功能描述**：用户可以选择不同的主题颜色
 
 **功能要求**：
-- 提供多种预设主题色（如：蓝色、绿色、紫色等）
+- 支持 [shadcn-svelte](https://www.shadcn-svelte.com/) 提供的主题色选项：
+  - Default（默认）
+  - Red（红色）
+  - Rose（玫瑰色）
+  - Orange（橙色）
+  - Green（绿色）
+  - Blue（蓝色）
+  - Yellow（黄色）
+  - Violet（紫色）
 - 主题色切换入口应易于访问（通常在顶部导航栏）
 - 切换主题色后，系统界面颜色立即更新
 - 主题色选择应持久化保存
@@ -138,11 +165,23 @@
 
 **功能要求**：
 - 菜单项根据用户角色动态加载
-- 支持多级菜单（至少支持二级菜单）
+- 支持多级菜单，最多支持五级菜单层级
 - 菜单项可配置（图标、名称、路径等）
 - 菜单支持折叠/展开功能
 - 当前激活的菜单项应有视觉标识（高亮显示）
-- 菜单支持搜索功能（可选）
+- 菜单支持搜索功能（必选功能）
+
+#### 3.5.3 菜单搜索功能
+**功能描述**：用户可以通过搜索快速查找菜单项
+
+**功能要求**：
+- 在菜单栏顶部或合适位置提供搜索框
+- 支持输入关键词搜索菜单项
+- 搜索应支持模糊匹配，匹配菜单项的名称和路径
+- 搜索结果实时显示，高亮显示匹配的关键词
+- 点击搜索结果可直接跳转到对应页面
+- 搜索框支持清空功能
+- 搜索无结果时显示提示信息
 
 #### 3.5.2 菜单交互
 **功能要求**：
@@ -284,40 +323,62 @@
 ## 7. 功能优先级
 
 ### 7.1 核心功能（P0）
-- 用户登录
-- 用户注册
+- 用户登录（含验证码）
+- 用户注册（含验证码）
 - 角色区分
-- 动态菜单栏
+- 动态菜单栏（支持五级菜单）
 - 用户信息展示
 - 退出登录
+- 记住登录状态
 
 ### 7.2 重要功能（P1）
 - 修改密码
+- 忘记密码
 - 面包屑导航
-- 国际化
-- 主题色切换
+- 国际化（中文、英文）
+- 主题色切换（shadcn-svelte主题）
 - 黑白模式切换
+- 菜单搜索功能
 
 ### 7.3 增强功能（P2）
-- 菜单搜索
-- 记住登录状态
-- 忘记密码
 - 数据级权限控制
+- 菜单栏位置配置
+- 跟随系统设置（黑白模式）
 
-## 8. 待确认事项
+## 8. 已确认事项
 
-1. 需要支持哪些语言？
-2. 需要提供哪些主题色选项？
-3. 需要支持哪些用户角色？
-4. 菜单支持几级层级？
-5. 是否需要记住登录状态功能？
-6. 是否需要忘记密码功能？
-7. 是否需要验证码功能？
-8. 是否需要菜单搜索功能？
+### 8.1 语言支持
+- **已确认**：系统支持中文简体、英文两种语言
+
+### 8.2 主题色选项
+- **已确认**：系统支持 [shadcn-svelte](https://www.shadcn-svelte.com/) 提供的主题色：
+  - Default（默认）
+  - Red（红色）
+  - Rose（玫瑰色）
+  - Orange（橙色）
+  - Green（绿色）
+  - Blue（蓝色）
+  - Yellow（黄色）
+  - Violet（紫色）
+
+### 8.3 菜单层级
+- **已确认**：菜单最多支持五级层级
+
+### 8.4 记住登录状态
+- **已确认**：需要记住登录状态功能，用户可选择是否勾选"记住我"
+
+### 8.5 忘记密码功能
+- **已确认**：需要忘记密码功能，用户可通过邮箱重置密码
+
+### 8.6 验证码功能
+- **已确认**：需要验证码功能，登录和注册页面都需要图形验证码
+
+### 8.7 菜单搜索功能
+- **已确认**：需要菜单搜索功能，用户可通过关键词快速查找菜单项
 
 ---
 
-**文档版本**：v1.0  
+**文档版本**：v1.1  
 **创建日期**：2025-01-27  
 **最后更新**：2025-01-27
 
