--- a/docs/需求分析文档.md
+++ b/docs/需求分析文档.md
@@ -170,6 +170,12 @@
 - 菜单支持折叠/展开功能
 - 当前激活的菜单项应有视觉标识（高亮显示）
 - 菜单支持搜索功能（必选功能）
+- **菜单配置来源**：
+  - 支持从服务端获取菜单配置（通过API接口）
+  - 支持从前端配置文件读取菜单配置
+  - 提供配置开关，可在服务端配置和前端配置之间切换
+  - 服务端配置优先级高于前端配置（当两者同时存在时）
+  - 菜单配置应支持缓存机制，减少不必要的请求
 
 #### 3.5.3 菜单搜索功能
 **功能描述**：用户可以通过搜索快速查找菜单项
@@ -237,9 +243,51 @@
 - 修改失败时显示明确的错误提示
 - 修改密码后可能需要重新登录（可选）
 
-### 3.8 面包屑导航
+### 3.8 通用工具函数
 
-#### 3.8.1 面包屑显示
+#### 3.8.1 HTTP请求封装
+**功能描述**：封装通用的HTTP请求工具函数，统一管理API请求
+
+**功能要求**：
+- 基于 axios 封装统一的请求工具函数
+- 提供以下核心功能：
+  - 请求拦截器：统一添加请求头（如：token、语言标识等）
+  - 响应拦截器：统一处理响应数据、错误处理
+  - 请求超时设置：可配置请求超时时间
+  - 请求重试机制：支持失败请求自动重试（可配置）
+  - 请求取消：支持取消正在进行的请求
+- 提供常用的请求方法封装：
+  - GET 请求
+  - POST 请求
+  - PUT 请求
+  - DELETE 请求
+  - PATCH 请求
+- 统一错误处理：
+  - 网络错误处理
+  - HTTP状态码错误处理（401、403、404、500等）
+  - 业务错误处理
+  - 错误信息国际化支持
+- 支持请求和响应数据的转换
+- 支持请求取消功能（如：页面切换时取消未完成的请求）
+- 提供请求加载状态管理（可选）
+- 支持请求日志记录（开发环境）
+
+#### 3.8.2 其他通用工具函数
+**功能描述**：提供其他常用的工具函数
+
+**功能要求**：
+- 日期时间处理工具函数
+- 数据格式化工具函数
+- 数据验证工具函数
+- 本地存储工具函数（localStorage、sessionStorage封装）
+- 权限判断工具函数
+- 路由导航工具函数
+- 文件上传/下载工具函数
+- 工具函数应提供完整的TypeScript类型定义
+
+### 3.9 面包屑导航
+
+#### 3.9.1 面包屑显示
 **功能描述**：用户点击菜单进入页面后，显示面包屑导航
 
 **功能要求**：
@@ -248,7 +296,7 @@
 - 面包屑位置通常在页面顶部，内容区域上方
 - 面包屑样式应清晰易识别
 
-#### 3.8.2 面包屑交互
+#### 3.9.2 面包屑交互
 **功能描述**：面包屑路径中的每一项都可以点击
 
 **功能要求**：
@@ -326,10 +374,11 @@
 - 用户登录（含验证码）
 - 用户注册（含验证码）
 - 角色区分
-- 动态菜单栏（支持五级菜单）
+- 动态菜单栏（支持五级菜单，支持服务端/前端配置切换）
 - 用户信息展示
 - 退出登录
 - 记住登录状态
+- HTTP请求封装（axios封装）
 
 ### 7.2 重要功能（P1）
 - 修改密码
@@ -339,11 +388,14 @@
 - 主题色切换（shadcn-svelte主题）
 - 黑白模式切换
 - 菜单搜索功能
+- 通用工具函数封装
 
 ### 7.3 增强功能（P2）
 - 数据级权限控制
 - 菜单栏位置配置
 - 跟随系统设置（黑白模式）
+- 请求重试机制
+- 请求日志记录
 
 ## 8. 已确认事项
 
@@ -378,7 +430,7 @@
 
 ---
 
-**文档版本**：v1.1  
+**文档版本**：v1.2  
 **创建日期**：2025-01-27  
 **最后更新**：2025-01-27
 
