chore: 搭建基础框架和认证页面

--- a/docs/03-示意图-布局组件.md
+++ b/docs/03-示意图-布局组件.md
@@ -8,7 +8,7 @@
 ┌─────────────────────────────────────────────────────────────┐
 │  ┌─────────────────────────────────────────────────────┐ │
 │  │                    Header (顶部导航栏)                 │ │
-│  │  [Logo] 项目名称    [语言] [主题] [模式] [用户头像]    │ │
+│  │  [Logo] 项目名称    [搜索] [用户头像]                  │ │
 │  └─────────────────────────────────────────────────────┘ │
 ├─────────────────────────────────────────────────────────────┤
 │  ┌──────────┐  ┌───────────────────────────────────────┐ │
@@ -27,7 +27,10 @@
 │  │          │  │                                       │ │
 │  │          │  │                                       │ │
 │  │          │  │                                       │ │
+│  │          │  │                                       │ │
 │  └──────────┘  └───────────────────────────────────────┘ │
+│                                                             │
+│                                            [⚙️ 设置] (悬浮按钮) │
 └─────────────────────────────────────────────────────────────┘
 ```
 
@@ -50,10 +53,10 @@
 │  ┌─────────────────────────────────────────────────────┐ │
 │  │  右侧操作区组件                                      │ │
 │  │                                                      │ │
-│  │  ┌────────┐  ┌────────┐  ┌────────┐  ┌────────┐ │ │
-│  │  │ 语言   │  │ 主题   │  │ 模式   │  │ 用户   │ │ │
-│  │  │ 切换   │  │ 切换   │  │ 切换   │  │ 信息   │ │ │
-│  │  └────────┘  └────────┘  └────────┘  └────────┘ │ │
+│  │  ┌──────────────┐  ┌────────┐                     │ │
+│  │  │ 🔍 搜索菜单  │  │ 用户   │                     │ │
+│  │  │ (Ctrl+K)     │  │ 信息   │                     │ │
+│  │  └──────────────┘  └────────┘                     │ │
 │  │                                                      │ │
 │  └─────────────────────────────────────────────────────┘ │
 │                                                             │
@@ -67,7 +70,7 @@
 │                                                             │
 │  [Logo图标]  后台管理系统                                    │
 │                                                             │
-│                                    [🌐 中文] [🎨 主题] [🌙] [👤 Admin ▼]
+│                                    [🔍 搜索菜单 (Ctrl+K)] [👤 Admin ▼]
 │                                                             │
 └─────────────────────────────────────────────────────────────┘
 ```
@@ -78,13 +81,6 @@
 ┌─────────────────────────────────────────────────┐
 │  Sidebar Component                              │
 ├─────────────────────────────────────────────────┤
-│                                                 │
-│  ┌──────────────────────────────────────────┐  │
-│  │        菜单搜索框                        │  │
-│  │  ┌──────────────────────────────────┐  │  │
-│  │  │ 🔍 搜索菜单...                   │  │  │
-│  │  └──────────────────────────────────┘  │  │
-│  └──────────────────────────────────────────┘  │
 │                                                 │
 │  ┌──────────────────────────────────────────┐  │
 │  │        菜单树                            │  │
@@ -108,7 +104,7 @@
 └─────────────────────────────────────────────────┘
 ```
 
-### 3.5 Sidebar 折叠状态
+### 3.7 Sidebar 折叠状态
 
 ```
 ┌─────────────────────────────────────────────────┐
@@ -132,6 +128,73 @@
 └─────────────────────────────────────────────────┘
 ```
 
+### 3.5.1 Header 搜索功能
+
+```
+┌─────────────────────────────────────────────────────────────┐
+│  搜索菜单组件 (快捷键: Ctrl/Command + K)                    │
+├─────────────────────────────────────────────────────────────┤
+│                                                             │
+│  ┌─────────────────────────────────────────────────────┐   │
+│  │  🔍 搜索菜单...                                     │   │
+│  └─────────────────────────────────────────────────────┘   │
+│                                                             │
+│  搜索结果列表:                                               │
+│  ┌─────────────────────────────────────────────────────┐   │
+│  │  📊 首页                                            │   │
+│  │  👥 用户管理                                        │   │
+│  │  🔐 角色管理                                        │   │
+│  │  ⚙️  系统设置                                       │   │
+│  └─────────────────────────────────────────────────────┘   │
+│                                                             │
+│  快捷键提示:                                                 │
+│  • Ctrl/Command + K: 打开搜索                               │
+│  • Esc: 关闭搜索                                            │
+│  • ↑↓: 选择结果                                             │
+│  • Enter: 跳转到选中项                                      │
+│                                                             │
+└─────────────────────────────────────────────────────────────┘
+```
+
+### 3.5.2 设置抽屉组件 (Settings Drawer)
+
+```
+┌─────────────────────────────────────────────────────────────┐
+│  设置抽屉组件 (右侧悬浮按钮触发)                            │
+├─────────────────────────────────────────────────────────────┤
+│                                                             │
+│  ┌─────────────────────────────────────────────────────┐   │
+│  │  设置                                              │   │
+│  │  ────────────────────────────────────────────────   │   │
+│  │                                                     │   │
+│  │  🌐 语言设置                                        │   │
+│  │  ┌─────────────────────────────────────────────┐   │   │
+│  │  │  [中文] [English] [日本語]                  │   │   │
+│  │  └─────────────────────────────────────────────┘   │   │
+│  │                                                     │   │
+│  │  🎨 主题设置                                        │   │
+│  │  ┌─────────────────────────────────────────────┐   │   │
+│  │  │  [浅色] [深色] [自动]                        │   │   │
+│  │  └─────────────────────────────────────────────┘   │   │
+│  │                                                     │   │
+│  │  🌙 模式设置                                        │   │
+│  │  ┌─────────────────────────────────────────────┐   │   │
+│  │  │  [明亮] [暗黑] [跟随系统]                    │   │   │
+│  │  └─────────────────────────────────────────────┘   │   │
+│  │                                                     │   │
+│  │  [关闭]                                             │   │
+│  │                                                     │   │
+│  └─────────────────────────────────────────────────────┘   │
+│                                                             │
+│  悬浮按钮位置:                                               │
+│                                                             │
+│                                                      ┌───┐ │
+│                                                      │ ⚙️ │ │
+│                                                      └───┘ │
+│                                                             │
+└─────────────────────────────────────────────────────────────┘
+```
+
 ### 3.6 Breadcrumb 组件结构
 
 ```
@@ -152,7 +215,7 @@
 └─────────────────────────────────────────────────────────────┘
 ```
 
-### 3.7 MainLayout 组件结构
+### 3.8 MainLayout 组件结构
 
 ```
 ┌─────────────────────────────────────────────────────────────┐
@@ -177,7 +240,7 @@
 └─────────────────────────────────────────────────────────────┘
 ```
 
-### 3.8 响应式布局
+### 3.9 响应式布局
 
 ```
 桌面端 (>1024px)             平板端 (768px-1024px)        移动端 (<768px)
@@ -196,35 +259,47 @@
 └────────┴────────┘         └────────┴────────┘         └─────────────┘
 ```
 
-### 3.9 实现顺序
+### 3.10 实现顺序
 
 ```
 步骤1: 创建 Header 组件
   ├─ components/layout/Header.svelte
   ├─ Logo 和项目名称展示
-  ├─ 语言切换组件
-  ├─ 主题切换组件
-  ├─ 模式切换组件
+  ├─ 搜索功能组件 (快捷键 Ctrl/Command+K)
   └─ 用户信息下拉菜单
 
 步骤2: 创建 Sidebar 组件
   ├─ components/layout/Sidebar.svelte
-  ├─ 菜单搜索功能
   ├─ 菜单树渲染
   ├─ 菜单折叠/展开
   └─ 菜单激活状态
 
-步骤3: 创建 Breadcrumb 组件
+步骤3: 创建搜索组件
+  ├─ components/layout/SearchMenu.svelte
+  ├─ 快捷键监听 (Ctrl/Command+K)
+  ├─ 菜单搜索功能
+  └─ 搜索结果展示和跳转
+
+步骤4: 创建设置抽屉组件
+  ├─ components/layout/SettingsDrawer.svelte
+  ├─ 语言切换功能
+  ├─ 主题切换功能
+  ├─ 模式切换功能
+  └─ 悬浮按钮触发
+
+步骤5: 创建 Breadcrumb 组件
   ├─ components/layout/Breadcrumb.svelte
   ├─ 根据路由生成面包屑
   └─ 面包屑点击跳转
 
-步骤4: 创建 MainLayout 组件
+步骤6: 创建 MainLayout 组件
   ├─ components/layout/MainLayout.svelte
   ├─ 整合 Header、Sidebar、Breadcrumb
+  ├─ 集成搜索组件
+  ├─ 集成设置抽屉组件
   └─ 响应式布局处理
 
-步骤5: 创建后台管理布局路由
+步骤7: 创建后台管理布局路由
   └─ routes/(dashboard)/+layout.svelte
 ```
 
