--- a/docs/技术方案.md
+++ b/docs/技术方案.md
@@ -6,11 +6,22 @@
 
 #### 1.1.1 前端框架：SvelteKit
 **选型理由**：
-- 基于 Svelte 编译时框架，性能优异
+- 基于 Svelte 5 编译时框架，性能优异
 - 内置路由、服务端渲染（SSR）、静态站点生成（SSG）支持
 - 文件系统路由，开发体验友好
 - 官方支持 TypeScript
 - 适合构建现代 Web 应用
+- **Svelte 5 新特性**：
+  - Runes 响应式系统（$state, $derived, $effect）
+  - 更明确的响应式声明
+  - 更好的类型推断
+  - 性能优化
+- **SvelteKit 最新特性**：
+  - Init Hook：服务器启动时初始化
+  - Transport Hook：自定义序列化
+  - 服务端路由解析优化
+  - WebSockets 支持（测试中）
+  - 文件上传流式处理
 
 #### 1.1.2 构建工具：Vite
 **选型理由**：
@@ -54,8 +65,16 @@
 ### 1.2 辅助技术栈
 
 #### 1.2.1 状态管理
-- **Svelte Stores**：Svelte 内置状态管理，轻量且高效
-- **使用场景**：用户信息、主题配置、语言设置、菜单状态等全局状态
+- **Svelte 5 Runes**：使用新的 runes 系统进行状态管理
+  - `$state`：声明响应式状态
+  - `$derived`：声明派生状态
+  - `$effect`：处理副作用
+  - `$props`：组件属性（替代 export let）
+- **Svelte Stores（兼容）**：对于需要跨组件共享的状态，仍可使用传统 stores
+- **使用场景**：
+  - 组件内部状态：使用 `$state` runes
+  - 全局共享状态：使用 runes 或 stores
+  - 用户信息、主题配置、语言设置、菜单状态等全局状态
 - **Hooks 模式**：提供 `useForm` 和 `useTable` Hook，简化组件状态管理
 
 #### 1.2.2 国际化方案
@@ -69,6 +88,10 @@
 
 #### 1.2.4 路由守卫
 - **SvelteKit hooks**：使用 `hooks.server.ts` 和 `hooks.client.ts` 实现路由守卫
+- **最新 API**：
+  - `handle`：请求处理钩子（已支持 AbortSignal）
+  - `init`：服务器启动时初始化（新增）
+  - `transport`：自定义序列化（新增）
 - **功能**：权限控制、登录状态检查
 
 #### 1.2.5 图标库
@@ -311,16 +334,19 @@ ai-svelteKit-admin/
 **技术方案**：
 - **页面路由**：`src/routes/(auth)/login/+page.svelte`
 - **组件**：`LoginForm.svelte` 使用 shadcn-svelte 的表单组件
-- **状态管理**：使用 `auth` store 管理登录状态
+- **状态管理**：
+  - 组件内部状态使用 `$state` runes（Svelte 5）
+  - 全局认证状态使用 `auth` store（基于 runes）
 - **API 调用**：通过 `auth.service.ts` 调用登录接口
 - **验证码**：独立的 `Captcha.svelte` 组件，支持刷新
 - **记住我**：使用 `storage.ts` 工具保存 token 到 localStorage
-- **路由守卫**：在 `hooks.server.ts` 中检查登录状态
+- **路由守卫**：在 `hooks.server.ts` 中检查登录状态（使用最新 API）
 
 #### 4.1.2 注册功能
 **技术方案**：
 - **页面路由**：`src/routes/(auth)/register/+page.svelte`
 - **表单验证**：使用 Zod 进行表单数据验证
+- **状态管理**：使用 `$state` runes 管理表单状态
 - **API 调用**：通过 `auth.service.ts` 调用注册接口
 - **验证码**：复用 `Captcha.svelte` 组件
 
@@ -367,16 +393,16 @@ ai-svelteKit-admin/
 #### 4.4.1 主题色切换
 **技术方案**：
 - **主题配置**：使用 Tailwind CSS 的 CSS 变量
-- **主题 Store**：`theme.ts` store 管理当前主题色
+- **主题 Store**：`theme.ts` 使用 `$state` runes 管理当前主题色
 - **主题文件**：`src/lib/config/theme.config.ts` 定义 shadcn-svelte 主题色
-- **动态切换**：通过修改 `:root` CSS 变量实现主题切换
+- **动态切换**：通过 `$effect` 监听主题变化，修改 `:root` CSS 变量
 - **持久化**：主题选择保存到 localStorage
 
 #### 4.4.2 黑白模式切换
 **技术方案**：
 - **Tailwind 暗色模式**：使用 `dark:` 前缀
-- **模式 Store**：`theme.ts` store 管理当前模式
-- **动态切换**：通过修改 `<html>` 的 `class` 或 `data-theme` 属性
+- **模式 Store**：`theme.ts` 使用 `$state` runes 管理当前模式
+- **动态切换**：通过 `$effect` 监听模式变化，修改 `<html>` 的 `class` 或 `data-theme` 属性
 - **跟随系统**：使用 `prefers-color-scheme` 媒体查询（可选）
 
 ### 4.5 动态菜单栏
@@ -612,36 +638,103 @@ ai-svelteKit-admin/
 
 ## 5. 状态管理方案
 
-### 5.1 Store 设计
+### 5.1 Svelte 5 Runes 状态管理
 
-#### 5.1.1 认证 Store（auth.ts）
-**功能**：
-- 管理登录状态
-- 存储 token
-- 提供登录、登出方法
+#### 5.1.1 Runes 基础
+**Svelte 5 引入了新的 runes 系统，提供更明确的响应式声明**：
 
-#### 5.1.2 用户 Store（user.ts）
-**功能**：
-- 存储用户信息
-- 提供更新用户信息方法
+- **`$state`**：声明响应式状态
+  ```typescript
+  let count = $state(0);
+  let user = $state<UserInfo | null>(null);
+  ```
 
-#### 5.1.3 菜单 Store（menu.ts）
-**功能**：
-- 存储菜单数据
-- 管理菜单展开/折叠状态
-- 提供菜单搜索功能
+- **`$derived`**：声明派生状态（替代 `$:`）
+  ```typescript
+  let double = $derived(count * 2);
+  let isAuthenticated = $derived(!!user);
+  ```
 
-#### 5.1.4 主题 Store（theme.ts）
-**功能**：
-- 管理主题色
-- 管理黑白模式
-- 持久化主题设置
+- **`$effect`**：处理副作用（替代 `$:` 副作用块）
+  ```typescript
+  $effect(() => {
+    if (user) {
+      console.log('User logged in:', user);
+    }
+  });
+  ```
 
-#### 5.1.5 国际化 Store（i18n.ts）
-**功能**：
-- 管理当前语言
-- 提供语言切换方法
-- 持久化语言设置
+- **`$props`**：组件属性（替代 `export let`）
+  ```typescript
+  let { name, age = 18 } = $props<{ name: string; age?: number }>();
+  ```
+
+#### 5.1.2 全局状态管理策略
+**对于需要跨组件共享的状态，有两种方案**：
+
+1. **使用 Runes + 模块级状态**（推荐）
+   - 在模块中声明 `$state`，导出访问函数
+   - 适合简单的全局状态
+
+2. **使用传统 Stores**（兼容）
+   - 对于复杂状态或需要 store 特性的场景
+   - 与 runes 完全兼容
+
+### 5.2 Store 设计
+
+#### 5.2.1 认证 Store（auth.ts）
+**技术方案**：
+- **使用 Svelte 5 Runes**：使用 `$state` 管理状态
+- **功能**：
+  - 管理登录状态
+  - 存储 token
+  - 提供登录、登出方法
+- **实现方式**：
+  ```typescript
+  class AuthState {
+    isAuthenticated = $state(false);
+    token = $state<string | null>(null);
+    user = $state<UserInfo | null>(null);
+    
+    login(token: string, user: UserInfo) { ... }
+    logout() { ... }
+  }
+  export const auth = new AuthState();
+  ```
+
+#### 5.2.2 用户 Store（user.ts）
+**技术方案**：
+- **使用 Svelte 5 Runes**：使用 `$state` 管理用户信息
+- **功能**：
+  - 存储用户信息
+  - 提供更新用户信息方法
+
+#### 5.2.3 菜单 Store（menu.ts）
+**技术方案**：
+- **使用 Svelte 5 Runes**：使用 `$state` 和 `$derived` 管理菜单
+- **功能**：
+  - 存储菜单数据
+  - 管理菜单展开/折叠状态
+  - 提供菜单搜索功能
+  - 使用 `$derived` 计算过滤后的菜单
+
+#### 5.2.4 主题 Store（theme.ts）
+**技术方案**：
+- **使用 Svelte 5 Runes**：使用 `$state` 和 `$effect` 管理主题
+- **功能**：
+  - 管理主题色
+  - 管理黑白模式
+  - 持久化主题设置
+  - 使用 `$effect` 同步 DOM 类名
+
+#### 5.2.5 国际化 Store（i18n.ts）
+**技术方案**：
+- **使用 Svelte 5 Runes**：使用 `$state` 和 `$derived` 管理国际化
+- **功能**：
+  - 管理当前语言
+  - 提供语言切换方法
+  - 持久化语言设置
+  - 使用 `$derived` 计算翻译函数
 
 ## 6. 路由设计
 
@@ -661,16 +754,26 @@ ai-svelteKit-admin/
 
 #### 6.2.1 服务端守卫
 **实现位置**：`src/hooks/hooks.server.ts`
+**最新 API**：
+- **`handle`**：请求处理钩子
+  - 支持 `AbortSignal`（通过 `event.request.signal`）
+  - 支持异步处理
+- **`init`**：服务器启动时初始化（可选）
+  - 用于初始化数据库连接等异步任务
+- **`transport`**：自定义序列化（可选）
+  - 用于序列化/反序列化非 POJO 对象
 **功能**：
 - 检查登录状态
 - 检查页面权限
 - 重定向未授权用户
+- 添加请求头（如语言标识）
 
 #### 6.2.2 客户端守卫
 **实现位置**：`src/hooks/hooks.client.ts`
 **功能**：
 - 客户端路由拦截
 - 权限检查
+- 使用 `$effect` 监听路由变化
 
 ## 7. 样式方案
 
@@ -956,7 +1059,78 @@ ai-svelteKit-admin/
 
 ---
 
-**文档版本**：v1.1  
+## 14. Svelte 5 迁移指南
+
+### 14.1 从 Svelte 4 迁移到 Svelte 5
+
+#### 14.1.1 自动迁移工具
+**使用官方迁移工具**：
+```bash
+npx sv migrate svelte-5
+```
+该工具会自动转换大部分代码。
+
+#### 14.1.2 手动迁移要点
+
+1. **响应式变量**：
+   - `let count = 0;` → `let count = $state(0);`
+
+2. **派生值**：
+   - `$: double = count * 2;` → `let double = $derived(count * 2);`
+
+3. **副作用**：
+   - `$: { ... }` → `$effect(() => { ... });`
+
+4. **组件属性**：
+   - `export let name;` → `let { name } = $props();`
+
+5. **Store 订阅**：
+   - `$store` 语法仍然可用，但推荐使用 runes
+
+#### 14.1.3 兼容性说明
+- Svelte 4 的 stores 在 Svelte 5 中完全兼容
+- 可以逐步迁移，不需要一次性全部更改
+- 新旧语法可以混用
+
+### 14.2 SvelteKit 最新特性使用
+
+#### 14.2.1 Init Hook
+**用途**：服务器启动时初始化
+```typescript
+// hooks.server.ts
+export const init = async () => {
+  // 初始化数据库连接等
+  await initializeDatabase();
+};
+```
+
+#### 14.2.2 Transport Hook
+**用途**：自定义序列化
+```typescript
+// hooks.server.ts
+export const transport = {
+  encode: (value) => { /* 序列化 */ },
+  decode: (value) => { /* 反序列化 */ }
+};
+```
+
+#### 14.2.3 AbortSignal 支持
+**用途**：请求取消
+```typescript
+// hooks.server.ts
+export const handle = async ({ event, resolve }) => {
+  const signal = event.request.signal;
+  // 使用 signal 进行请求管理
+};
+```
+
+---
+
+**文档版本**：v2.0  
 **创建日期**：2025-01-27  
-**最后更新**：2025-01-27
+**最后更新**：2025-01-27  
+**更新内容**：
+- 添加 Svelte 5 Runes 状态管理方案
+- 更新 SvelteKit 最新 API 说明
+- 添加迁移指南
 
